feat: added assets and meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-1/css/all.min.css" integrity="sha512-ZYg+hQvLlM0W9C3P6vTpes5LmJ66G2EsroxDNzwD6qiulckldb29eD9I672HL2X+LH5nRhY1sQqZLJGB+aUUPg==" crossorigin="anonymous">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <link rel="icon" href="./assets/kh-pink-black.png">
+   <!-- Facebook Meta Tags -->
+   <meta property="og:url" content="https://karahowes-portfolio.netlify.app/"/>
+   <meta property="og:type" content="website" />
+   <meta property="og:title" content="Kara Howes's React Portfolio" />
+   <meta
+     property="og:description"
+     content="Frontend Developer + PhD Chemistry"
+   />
+   <meta
+     property="og:image"
+     content="https://karahowes-portfolio.netlify.app/assets/og-img.png"
+   />
     <title>Kara Howes React Portfolio</title>
   </head>
 
