feat: added footer, header, skills and bio components

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,8 @@
    />
    <meta
      property="og:image"
-     content="https://karahowes-portfolio.netlify.app/assets/og-img.png"
+     content="https://kara-react-portfolio.netlify.app/assets/og-img.png"
+     
    />
     <title>Kara Howes React Portfolio</title>
   </head>
