--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,24 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
+    
+    export default Header;
+<div id="google_translate_element"></div>
+ 
+ <script type="text/javascript">
+     function googleTranslateElementInit() {
+         new google.translate.TranslateElement(
+             {pageLanguage: 'en'},
+             'google_translate_element'
+         );
+     }
+ </script>
+
+ <script type="text/javascript"
+         src=
+"https://translate.google.com/translate_a/element.js?
+cb=googleTranslateElementInit">
+ </script><!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
